--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-wearable:17.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'org.apache.commons:commons-lang3:3.5'
+    implementation project(path: ':common')
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
