--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-
+    implementation 'org.apache.commons:commons-lang3:3.5'
+    implementation project(path: ':common')
 }
